@startuml
' Hide methods as this is an ERD
hide methods

' Styling
skinparam class {
    BackgroundColor White
    ArrowColor #2c3e50
    BorderColor #2c3e50
}
skinparam roundcorner 5

' Custom style for JSONB structures to distinguish them from tables
skinparam class<<JSONB>> {
    BackgroundColor #f0f8ff
    BorderColor #4682b4
    HeaderBackgroundColor #87cefa
}

' --- Relational Tables ---

entity "stories" as stories {
  * **id** : text <<PK>>
  --
  * version : text
  * title : text
  * author : text
  description : text
  target_age_min : int
  target_age_max : int
  cover_url : text
  * entry_point : text
  * capabilities : text[]
  * localization : text[]
  * created_at : timestamptz
}

entity "story_states" as story_states {
  * **id** : text <<PK>>
  * **story_id** : text <<PK>> <<FK>>
  --
  * type : text
  * background : text
  music : text
  * actors : jsonb
  on_enter : jsonb
  * transitions : jsonb
  ai_context : text
}

entity "story_scripts" as story_scripts {
  * **id** : text <<PK>>
  * **story_id** : text <<PK>> <<FK>>
  --
  * language : text
  * lines : jsonb
}

entity "story_intents" as story_intents {
  * **id** : text <<PK>>
  * **story_id** : text <<PK>> <<FK>>
  --
  * keywords : text[]
}

entity "story_embeddings" as story_embeddings {
  * **id** : bigserial <<PK>>
  --
  * **story_id** : text <<FK>>
  state_id : text
  * content : text
  embedding : vector(768)
  * created_at : timestamptz
}

' --- JSONB Embedded Structures ---

entity "ActorConfig [actors array]" as actor_config <<JSONB>> {
  * actorId : string
  * riveAsset : string
  * stateMachineName : string
  riveInputs : object 
  position : object {x: float, y: float}
}

entity "OnEnter [on_enter object]" as on_enter <<JSONB>> {
  playScript : string
  actorAnimations : object (Map)
}

entity "Transition [transitions array]" as transition <<JSONB>> {
  * on : string (Enum)
  intentId : string
  targetState : string
}

entity "ScriptLine [lines array]" as script_line <<JSONB>> {
  id : string
  * actorId : string
  * text : string
  audioUrl : string
  ttsConfig : object
  sfx : string
  waitAfter : integer
  animationTrigger : string
}

' --- Table Relationships ---

stories ||--o{ story_states : "1 to many"
stories ||--o{ story_scripts : "1 to many"
stories ||--o{ story_intents : "1 to many"
stories ||--o{ story_embeddings : "1 to many"

' --- JSONB Composition Relationships ---
' Using *-- to denote that the JSON documents belong strictly to the column

story_states *-- actor_config : "contains in \n'actors' (jsonb)"
story_states *-- on_enter : "contains in \n'on_enter' (jsonb)"
story_states *-- transition : "contains in \n'transitions' (jsonb)"

story_scripts *-- script_line : "contains in \n'lines' (jsonb)"

@enduml
